service/feed-server/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: feed-server-dev
  labels:
    name: feed-server-dev
    environment: dev
    project: feed-server
    managed-by: argocd
